--- a/customvideo/index.html
+++ b/customvideo/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/94a0f12940.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/progress.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -23,8 +22,11 @@
         <button class="btn" id="stop">
             <i class="fa fa-stop fa-2x"></i>
         </button>
+        <button class="btn" id="volume">
+            <i class="fa fa-volume-up fa-2x"></i>
+        </button>
         <input type="range" id="progress" class="progress" min="0" max="100" step="0.1" value="0">
-        <span class="timestamp" id="timestamp"></span>
+        <span class="timestamp" id="timestamp">00:00</span>
     </div>
 
     <script src="script.js"></script>
