--- a/mealfinder/index.html
+++ b/mealfinder/index.html
@@ -11,7 +11,25 @@
 
     <div class="container">
         <h1>Meal Finder</h1>
-    </div>
+        <div class="flex">
+                <form class="flex" id="submit">
+                    <input type="text" id="search" placeholder="Search for meals or keywords">
+                    <button type="submit" class="search-btn">
+                        <i class="fas fa-search"></i>
+                </form>
+            </button>
+
+            <button class="random-btn" id="random">
+                <i class="fas fa-random"></i>
+            </button>
+        </div>
+        <div id="result-heading"></div>
+        <div id="meals" class="meals"></div>
+        <div id="single-meal"></div>
+
+    </div> <!-- close container -->
+
+
     <script src="script.js"></script>
 </body>
 </html>
